fix: lightgallery videos are too large

--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -22,7 +22,7 @@
   display: none;
 }
 // Change to Lightgallery: Video is too large (probably linked to above change)
-.lg-show .lg-outer .lg-item video {
+video.lg-video-object {
   max-width: 100%;
   max-height: 100%;
 }
